made nuke into a button

--- a/private/admin.html
+++ b/private/admin.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>congrats youre an admin</h1>
-    
+    <button onclick='nuke()'>NUKE!!</button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src='admin.js'></script>
 </body>
