changed input to forms, fixed redirection

--- a/private/admin.html
+++ b/private/admin.html
@@ -9,6 +9,10 @@
 <body>
     <h1>congrats youre an admin</h1>
     <button onclick='nuke()'>NUKE!!</button>
+    <ul id='picList'>
+       
+    </ul>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src='admin.js'></script>
 </body>
