added selective deletion to admin page

--- a/private/admin.html
+++ b/private/admin.html
@@ -9,10 +9,12 @@
 <body>
     <h1>congrats youre an admin</h1>
     <button onclick='nuke()'>NUKE!!</button>
+    <form action='/deleteSelected' method='POST'>
     <ul id='picList'>
        
     </ul>
-    
+        <input type='submit' value='delete selected'>;
+    </form>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src='admin.js'></script>
 </body>
