fixed admin page

--- a/private/admin.html
+++ b/private/admin.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <title></title>
 </head>
 
 <body>
-    <h1>congrats youre an admin</h1>
-    <button onclick='nuke()'>NUKE!!</button>
+  <div class="container">
+    <div class="page-header text-center">
+      <h1>Admin Page</h1>
+    </div>
+    <button onclick='nuke()' class="btn btn-default">NUKE!!</button>
+  </div>
     <form action='/deleteSelected' method='POST'>
-    <ul id='picList'>
-       
-    </ul>
+    <div class="container grid-container" id="picList">
+
+    </div>
         <input type='submit' value='delete selected'>;
     </form>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
