--- a/private/admin.html
+++ b/private/admin.html
@@ -13,6 +13,7 @@
     <div class="page-header text-center">
       <h1>Admin Page</h1>
     </div>
+      <button onclick='logout()'>Logout</button>
     <button onclick='nuke()' class="btn btn-default">NUKE!!</button>
   </div>
     <form action='/deleteSelected' method='POST'>
